# kernel-rust-1

./: Cargo.toml  build.rs  run.fish
kernel/: .rustfmt.toml  Cargo.toml  build.fish  build.rs
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  apic.rs  frame.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  mem.rs  mutex.rs  once_lock.rs  serial.rs  version.rs
src/: main.rs
