cargo-features = ["codegen-backend"]


[workspace]
members = ["kernel"]

[package]
name = "os"
version = "0.1.0"
edition = "2021"

[build-dependencies]
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = "0.11.7"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[dependencies]
ovmf-prebuilt = "0.1.0-alpha.1"

[features]
serial = ["kernel/serial"]
