
[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
noto-sans-mono-bitmap = { version = "0.3.0", features = ["unicode-specials", "size_20", "size_24", "size_32"] }
volatile = "0.5.2"
x86_64 = "0.15.1"
uart_16550 = "0.3.0"
bootloader_api = "0.11.7"
pic8259 = "0.11.0"
pc-keyboard = "0.7.0"
itertools = { version = "0.12.1", default-features = false }
acpi = "5.0.0"
linked_list_allocator = "0.10.5"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[features]
serial = []

[build-dependencies]
bstr = "1.9.1"

# [package.metadata.bootimage]
# test-success-exit-code = 33 
# test-timeout = 300
# test-args = [
#   "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
#   "-serial", "stdio",
#   "-display", "none"
# ]
